tests/init/neg/promotion-loop.check
-- Error: tests/init/neg/promotion-loop.scala:16:10 --------------------------------------------------------------------
16 |  println(b)      // error
   |          ^
   |          Cannot prove that the value is fully-initialized. Only initialized values may be used as arguments.
   |
   |          The unsafe promotion may cause the following problem:
   |          Cannot prove that the value is fully initialized. Only initialized values may be used as arguments.
